--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "style-loader": "^0.23.1",
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.9.1",
-    "webpack-merge": "^4.1.0"
+    "webpack-merge": "^4.1.0",
+    "extract-text-webpack-plugin": "^3.0.0"
   }
 }
