--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --open --config webpack.dev.js",
-    "build": "webpack --config webpack.prod.js"
+    "start": "webpack-dev-server --open --config build/webpack.dev.js",
+    "build": "webpack --config build/webpack.prod.js"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +19,7 @@
     "style-loader": "^0.23.1",
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.9.1",
+    "copy-webpack-plugin": "^4.0.1",
     "webpack-merge": "^4.1.0",
     "extract-text-webpack-plugin": "^3.0.0"
   }
